--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
     "@angular/service-worker": "~10.1.5",
+    "angular-plotly.js": "^3.0.0",
     "jspdf": "^2.1.1",
     "leaflet": "^1.7.1",
+    "ngx-papaparse": "^5.0.0",
+    "plotly.js": "^1.56.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
