cacheing api data for offline chart functionality

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -25,6 +25,17 @@
           "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
         ]
       }
+    },
+    {
+      "name": "external-apis",
+      "installMode": "prefetch",
+      "updateMode": "prefetch",
+      "resources": {
+        "urls": [
+          "https://corona-api.com/countries",
+          "https://raw.githubusercontent.com/plotly/datasets/master/2014_us_cities.csv"
+        ]
+      }
     }
   ]
 }
